# um-ass2sup

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CODE_REVIEW_CHECKLIST.md  COVERAGE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.en.md  README.md  SECURITY.md  alignment_all.sup  ass2sup-spec.html  deny.toml  easyavs2bdnxml-analysis-report.html  phase7-plan.md  phase7-spec.html  phase8-plan.md  phase8-spec.html  phase8-spec.md  phase9-spec.md  verify_bdn_png.py
ass2sup-libass/crates/ass2sup-cli/: Cargo.toml
ass2sup-libass/crates/ass2sup-cli/src/: lib.rs  main.rs
ass2sup-libass/crates/ass2sup-core/: Cargo.toml
ass2sup-libass/crates/ass2sup-core/src/: lib.rs
crates/ass-core/: Cargo.toml
crates/ass-core/benches/: parser_bench.rs
crates/ass-core/fuzz/: Cargo.toml
crates/ass-core/fuzz/fuzz_targets/: parse_ass.rs  parse_lenient.rs  parse_override_tag.rs  parse_srt.rs
crates/ass-core/src/: color.rs  effect.rs  error.rs  event.rs  karaoke.rs  lexer.rs  lib.rs  section.rs  span.rs  srt.rs  style.rs  types.rs
crates/ass-core/src/override_tag/: border.rs  clip.rs  color.rs  effect.rs  font.rs  geometry.rs  karaoke.rs  mod.rs  parse.rs  position.rs  util.rs
crates/ass-core/src/time/: convert.rs  fps.rs  mod.rs  timestamp.rs
crates/ass-core/tests/: complex_scenarios.rs  proptest.rs  test_irregular.rs  test_malformed.rs
crates/ass-parser/: Cargo.toml
crates/ass-parser/benches/: parser_bench.rs
crates/ass-parser/examples/: parse_ass.rs
crates/ass-parser/fixtures/libass/: colors_alpha.ass  colors_and_alpha_cascade.ass  colors_inline.ass  colors_inline_override.ass  colors_rgb.ass  combined_basic.ass  combined_complex.ass  combined_overlapping.ass  combined_tags.ass  comments_inline.ass  comments_section.ass  complex_dialog.ass  complex_effects.ass  edge_empty.ass  edge_large_values.ass  edge_negative_values.ass  edge_special_chars.ass  edge_whitespace.ass  error_invalid_timestamp.ass  error_malformed_style.ass  error_missing_style.ass  event_actor_name.ass  event_comment.ass  event_layer.ass  event_margins_override.ass  fonts_multiple.ass  fonts_section.ass  karaoke_k.ass  karaoke_kf_ko.ass  karaoke_kt.ass  karaoke_mixed.ass  minimal.ass  minimal_ssa_v4.ass  no_events.ass  no_styles.ass  override_alignment.ass  override_an.ass  override_be.ass  override_blur.ass  override_bold.ass  (+82 more)
crates/ass-parser/fuzz/: Cargo.toml
crates/ass-parser/fuzz/fuzz_targets/: parse.rs  parse_lenient.rs  parse_override_tag.rs  parse_srt.rs
crates/ass-parser/src/: color.rs  effect.rs  error.rs  event.rs  karaoke.rs  lib.rs  override_expr.rs  override_tag.rs  srt.rs  style.rs  timestamp.rs  types.rs
crates/ass-parser/tests/: libass_compat.rs  proptest.rs  test_ass_parser.rs  test_color.rs  test_event.rs  test_fixtures.rs  test_karaoke.rs  test_lenient.rs  test_srt.rs  test_style.rs  test_style_parsing_fix.rs  test_timestamp.rs
crates/ass-parser/tests/data/: fuzz_lenient_crash.txt  fuzz_override_tag_crash.txt  fuzz_srt_crash.txt
crates/ass-parser/tests/snapshots/: libass_compat__libass_compat__colors_alpha.snap  libass_compat__libass_compat__colors_rgb.snap  libass_compat__libass_compat__edge_empty.snap  libass_compat__libass_compat__edge_special_chars.snap  libass_compat__libass_compat__error_invalid_timestamp.snap  libass_compat__libass_compat__error_malformed_style.snap  libass_compat__libass_compat__override_an.snap  libass_compat__libass_compat__override_clip_drawing.snap  libass_compat__libass_compat__ssa_v4_color_as_decimal.snap  libass_compat__libass_compat__stress_many_events.snap  libass_compat__libass_compat__stress_overlap.snap  libass_compat__libass_compat__style_scale_spacing_angle.snap  (+1 more)
crates/ass2sup-cli/: Cargo.toml
crates/ass2sup-cli/src/: config.rs  error.rs  lib.rs  main.rs  ocr.rs  smart_error.rs  telemetry.rs  util.rs
crates/ass2sup-cli/src/cli/: args.rs  mod.rs  (+1 more)
crates/ass2sup-cli/tests/: config_test.rs  error_test.rs  telemetry_test.rs  test_args.rs  test_bdn.rs  test_cli.rs  test_convert.rs  test_e2e.rs  test_error.rs  test_fade.rs  test_golden.rs  test_golden_extended.rs  test_integration.rs  test_ocr_e2e.rs  test_parallel_frames_large.rs  test_resolution_auto_detect.rs  test_snapshots.rs  test_telemetry.rs
crates/bdn-xml/: Cargo.toml
crates/bdn-xml/proptest-regressions/: xml.txt
crates/bdn-xml/src/: error.rs  lib.rs  sink.rs  types.rs  xml.rs
crates/bdn-xml/tests/: test_bdn.rs
crates/color-quantizer/: Cargo.toml
crates/color-quantizer/benches/: quantizer.rs
crates/color-quantizer/examples/: quantize_image.rs
crates/color-quantizer/fuzz/: Cargo.toml
crates/color-quantizer/src/: color_pipeline.rs  dithering.rs  error.rs  lib.rs  median_cut.rs  pipeline.rs  types.rs
crates/color-quantizer/tests/: proptest.rs  test_edge_quantizer.rs  test_quantizer.rs
crates/pgs-encoder/: Cargo.toml
crates/pgs-encoder/benches/: encoder.rs
crates/pgs-encoder/examples/: decode_sup_to_png.rs  dump_pcs.rs  encode_sup.rs
crates/pgs-encoder/fuzz/: Cargo.toml
crates/pgs-encoder/src/: color.rs  decode_to_image.rs  decoder.rs  encoder.rs  epoch.rs  lib.rs  rle.rs  types.rs
crates/pgs-encoder/tests/: proptest.rs  test_decode_roundtrip.rs  test_edge_cases.rs  test_golden.rs  test_rle_roundtrip.rs
crates/subtitle-renderer/: Cargo.toml
crates/subtitle-renderer-libass/: Cargo.toml  build.rs
crates/subtitle-renderer-libass/src/: lib.rs
crates/subtitle-renderer/benches/: renderer.rs
crates/subtitle-renderer/examples/: list_fonts.rs
crates/subtitle-renderer/src/: backend.rs  cache.rs  context.rs  effect_stack.rs  effects.rs  error.rs  font.rs  font_cosmic.rs  karaoke.rs  lib.rs  rasterizer.rs  renderer.rs  shaper.rs  transform.rs
crates/subtitle-renderer/tests/: cosmic_text.rs  test_basic.rs  test_cache.rs  test_context.rs  test_effects.rs  test_embedded_fonts.rs  test_karaoke.rs  test_perspective.rs  test_pixmap_pool.rs  test_renderer.rs  test_transform.rs
crates/subtitle-validator/: Cargo.toml
crates/subtitle-validator/src/: lib.rs  report.rs  rules.rs
crates/subtitle-validator/tests/: test_edge_cases.rs  test_validator.rs
(+322 files in other folders)
