[workspace]
resolver = "2"
exclude = ["crates/*/fuzz"]
members = [
    "crates/subtitle-validator",
    "crates/subtitle-renderer",
    "crates/color-quantizer",
    "crates/bdn-xml",
    "crates/pgs-encoder",
    "crates/ass2sup-cli", "crates/ass-core",
]

[workspace.package]
version = "0.5.5"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/UnforgetMemory/um-ass2sup"
description = "ASS/SSA/SRT to Blu-ray SUP/PGS subtitle converter written in Rust"
keywords = ["subtitle", "blu-ray", "pgs", "sup", "ass"]
categories = ["multimedia", "command-line-utilities"]

[workspace.dependencies]
ass-core = { path = "crates/ass-core", package = "ass_core" }
subtitle-validator = { path = "crates/subtitle-validator" }
subtitle-renderer = { path = "crates/subtitle-renderer" }
color-quantizer = { path = "crates/color-quantizer" }
bdn-xml = { path = "crates/bdn-xml" }
pgs-encoder = { path = "crates/pgs-encoder" }

thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = ">=4.0, <4.6", features = ["derive"] }
rayon = "1"
indicatif = "0.17"
glob = "0.3"
walkdir = "2"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
insta = "1"
wide = "1.5"
parking_lot = "0.12"
tiny-skia = "0.12"
quick-xml = "0.36"
png = "0.17"
strsim = "0.4"

# Cosmic-text font engine (replaces fontdb+rustybuzz+ttf-parser)
cosmic-text = "0.19"
ttf-parser = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
