[workspace]
resolver = "2"
exclude = ["crates/*/fuzz"]
members = [
    "crates/subtitle-validator",
    "crates/subtitle-renderer",
    "crates/color-quantizer",
    "crates/bdn-xml",
    "crates/pgs-encoder",
    "crates/ass2sup-cli", "crates/ass-core",
    "crates/libass-sys",
    "crates/subtitle-renderer-libass",
]

[workspace.package]
version = "3.0.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/UnforgetMemory/um-ass2sup"
description = "ASS/SSA/SRT to Blu-ray SUP/PGS subtitle converter written in Rust"
keywords = ["subtitle", "blu-ray", "pgs", "sup", "ass"]
categories = ["multimedia", "command-line-utilities"]

[workspace.dependencies]
ass-core = { path = "crates/ass-core", package = "ass_core" }
subtitle-validator = { path = "crates/subtitle-validator" }
subtitle-renderer = { path = "crates/subtitle-renderer" }
color-quantizer = { path = "crates/color-quantizer" }
bdn-xml = { path = "crates/bdn-xml" }
pgs-encoder = { path = "crates/pgs-encoder" }
libass-sys = { path = "crates/libass-sys" }
subtitle-renderer-libass = { path = "crates/subtitle-renderer-libass" }

thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = ">=4.0, <4.7", features = ["derive"] }
rayon = "1"
indicatif = "0.18"
glob = "0.3"
walkdir = "2"
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
insta = "1"
wide = "1.5"
parking_lot = "0.12"
tiny-skia = "0.12"
quick-xml = "0.41"
png = "0.18"
strsim = "0.11"

swash = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
