[package]
name = "ass2sup-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI tool for converting ASS/SRT subtitles to SUP/PGS format"

[[bin]]
name = "ass2sup"
path = "src/main.rs"

[dependencies]
ass-parser.workspace = true
subtitle-validator.workspace = true
subtitle-renderer.workspace = true
color-quantizer.workspace = true
bdn-xml.workspace = true
pgs-encoder.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true
indicatif.workspace = true
thiserror.workspace = true
glob.workspace = true
walkdir.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
insta.workspace = true
