[package]
name = "ass2sup-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI tool for converting ASS/SRT subtitles to SUP/PGS format"

[[bin]]
name = "ass2sup"
path = "src/main.rs"

[features]
default = ["native-backend"]
native-backend = ["dep:subtitle-renderer"]
libass-backend = ["dep:subtitle-renderer-libass", "dep:libass-sys"]

[dependencies]
ass-core.workspace = true
subtitle-validator.workspace = true
subtitle-renderer = { workspace = true, optional = true }
subtitle-renderer-libass = { workspace = true, optional = true }
libass-sys = { workspace = true, optional = true }
color-quantizer.workspace = true
bdn-xml.workspace = true
pgs-encoder.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true
indicatif.workspace = true
thiserror.workspace = true
glob.workspace = true
walkdir.workspace = true
serde.workspace = true
strsim.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
insta.workspace = true
png.workspace = true
