[package]
name = "bdn-xml"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "BDN XML generation and PNG encoding for Blu-ray subtitle pipeline"

[dependencies]
thiserror = "1"
tracing = "0.1"
quick-xml = "0.36"
png = "0.17"
