[package]
name = "bdn-xml"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "BDN XML generation and PNG encoding for Blu-ray subtitle pipeline"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
quick-xml.workspace = true
png.workspace = true

[dev-dependencies]
proptest.workspace = true
