[package]
name = "color-quantizer"
version = "0.1.0"
edition = "2021"
description = "Color quantization for PGS subtitle encoding (max 256 colors)"

[dependencies]
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
criterion.workspace = true
proptest = "1"

[[bench]]
name = "quantizer"
harness = false
