[package]
name = "color-quantizer"
version.workspace = true
edition = "2021"
rust-version.workspace = true
description = "Color quantization for PGS subtitle encoding (max 256 colors)"

[dependencies]
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
criterion.workspace = true
proptest = "1"

[[bench]]
name = "quantizer"
harness = false
