[package]
name = "color-quantizer"
version.workspace = true
edition = "2021"
rust-version.workspace = true
description = "Color quantization for PGS subtitle encoding (max 256 colors)"

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "quantizer"
harness = false
