[package]
name = "pgs-encoder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "PGS/SUP binary format encoder for Blu-ray subtitles"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
color-quantizer = { path = "../color-quantizer" }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "encoder"
harness = false
