[package]
name = "subtitle-renderer"
version.workspace = true
edition = "2021"
rust-version.workspace = true
license.workspace = true
description = "ASS/SRT subtitle rendering to RGBA bitmaps with font management, text shaping, and effects"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
fontdb.workspace = true
rustybuzz.workspace = true
ttf-parser.workspace = true
tiny-skia.workspace = true
ass-parser = { path = "../ass-parser" }
wide.workspace = true
parking_lot.workspace = true
fontconfig = { version = "0.11", optional = true, features = ["dlopen"] }
cosmic-text = { workspace = true, optional = true }

[features]
default = []
fontconfig = ["dep:fontconfig"]
cosmic-text = ["dep:cosmic-text"]

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "renderer"
harness = false
