[package]
name = "subtitle-renderer"
version.workspace = true
edition = "2021"
rust-version.workspace = true
license.workspace = true
description = "ASS/SRT subtitle rendering to RGBA bitmaps with font management, text shaping, and effects"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tiny-skia.workspace = true
ass_core = { path = "../ass-core" }
wide.workspace = true
parking_lot.workspace = true
cosmic-text = { workspace = true, features = ["swash"] }
fontdb = "0.23"
ttf-parser.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

