[package]
name = "ass-parser-fuzz"
version = "0.0.1"
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.ass-parser]
path = ".."

# Prevent workspace from including fuzz crate
[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"

[[bin]]
name = "parse_lenient"
path = "fuzz_targets/parse_lenient.rs"

[[bin]]
name = "parse_srt"
path = "fuzz_targets/parse_srt.rs"

[[bin]]
name = "parse_override_tag"
path = "fuzz_targets/parse_override_tag.rs"
